fix gaps

--- a/css/styles.css
+++ b/css/styles.css
@@ -630,18 +630,34 @@ footer .logo {
 .contact-form {
   display: flex;
   flex-direction: column;
-  row-gap: 8px;
 }
 
 .contact-label {
   display: flex;
   flex-direction: column;
-  color: #8e8f99;
   row-gap: 4px;
+
+  color: #8e8f99;
   font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.04em;
   font-size: 12px;
+
+  margin-bottom: 8px;
+}
+
+.comment-label {
+  display: flex;
+  flex-direction: column;
+  row-gap: 4px;
+
+  color: #8e8f99;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  font-size: 12px;
+
+  margin-bottom: 16px;
 }
 
 .contact-input {
@@ -722,7 +738,7 @@ input:focus + .modal-form-icon {
   justify-content: center;
   align-items: center;
 
-  transition: background-color cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-checkbox {
